# comprehension_vs_generators

./: pyproject.toml  test1.py
