[tool.poetry]
name = "comprehension_vs_generators"
version = "0.1.0"
description = ""
authors = ["Rodrigo Ghiraldeli <rodrigo.ghiraldeli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
